# canvas-downloader

./: .canvasignore.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: .canvasignore  config.toml
src/: api.rs  assignments.rs  canvas.rs  discussions.rs  files.rs  html.rs  macros.rs  main.rs  modules.rs  pages.rs  syllabus.rs  users.rs  utils.rs  videos.rs
