[package]
name = "canvas-downloader"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = ">=1.0"
chrono = ">=0.4"
clap = { version = ">=3.0", features = ["derive"] }
filetime = ">=0.2"
futures = ">=0.3"
ignore = ">=0.4"
indicatif = ">=0.17"
m3u8-rs = "6.0.0"
num_cpus = ">=1"
parse_link_header = ">=0.3.3"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = ">=0.12, <0.13", features = ["json", "cookies"] }
sanitize-filename = ">=0.4"
select = "0.6.1"
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1.0"
termsize = ">=0.1"
tokio = { version = ">=1", features = ["full"] }

[profile.release]
strip = true
